# fdmg-graph-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  SETUP.md  bla.md  conftest.py  main.py  pyproject.toml
.claude/agents/: cortex-orchestrator.md  tdd-developer.md  testing-agent.md
.specstory/: .project.json
.specstory/history/: 2025-11-06_12-57-21Z-ok-lets-do-a.md  2025-11-06_12-57-21Z.md  2025-11-06_13-41-06Z-lets-merge-back-to.md  2025-11-06_13-49-58Z-i-approve-of-story.md  2025-11-06_14-08-51Z-commit.md  2025-11-06_14-08-51Z.md  2025-11-06_16-59-29Z-lets-clear-context-first.md  2025-11-06_16-59-29Z.md  2025-11-06_17-00-17Z-developer-pickup-story-4.md  2025-11-06_22-03-29Z-ok-resume-task-6.md
backlog/: config.yml
backlog/docs/: architecture.md  requirements.md
backlog/tasks/: task-1 - Story-1-Project-Setup-&-Dependencies.md  task-10 - Add-Visual-Regression-Testing-with-pytest-image-snapshot.md  task-12 - BUG-Fix-File-Not-Found-Error-Crash.md  task-13 - FEATURE-Implement-Logical-Filename-Generation.md  task-14 - BUG-Dutch-Chart-Type-Not-Detected-+-Wrong-Language-Response.md  task-16 - Epic-Context-Aware-Intent-Detection-for-Conversational-Follow-ups.md  task-16.1 - Phase-1-Quick-Context-Aware-Intent-Detection-Fix.md  task-16.2 - Phase-2-Proper-Architecture-with-State-Tracking-and-Modification-Intent.md  (+9 more)
graph_agent/: README.md  agent.py  cli.py  config.py  state.py  tools.py
tests/: test_agent.py  test_ambiguity.py  test_cli.py  test_config.py  test_integration.py  test_state.py  test_tools.py  test_visual_regression.py
tests/fixtures/: decimals.xlsx  (+3 more)
(+1 files in other folders)
